--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,7 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+   <script type="text/javascript" src="lib/jquery-2.1.1.js"></script>	
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
