Alterações para inserir na playstore
\n

Deletadas algumas configurações que não estavam sendo utilizadas

Deletas algumas imagens que não estavam sendo utilizadas

--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
    <!--<meta http-equiv="Content-Security-Policy" content="default-src &apos;self&apos; data: gap: https://ssl.gstatic.com &apos;unsafe-eval&apos;; style-src &apos;self&apos; &apos;unsafe-inline&apos;; media-src *">-->
-   <meta http-equiv="Content-Security-Policy" content="script-src 'self' http://alturarunning.pe.hu">
+   <meta http-equiv="Content-Security-Policy" content="script-src &apos;self&apos; http://alturarunning.pe.hu">
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
